# lecture2anki

./: .env.example  .gitignore  README.md  claude.md  config.py  how-to-use.md  pyproject.toml  pyproject.yoml
specs/: auto-pipeline-web-ui.md  combines-transcript-notes-generation.md
src/: anki_client.py  card_generator.py  chunker.py  cli.py  config.py  db.py  deduplicator.py  models.py  recorder.py  transcriber.py  web.py
src/web_static/: app.js  index.html  styles.css
tests/: test_anki_client.py  test_card_generator.py  test_chunker.py  test_cli.py  test_config.py  test_db.py  test_deduplicator.py  test_jobs.py  test_recorder.py  test_transcriber.py  test_web_api.py
