[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lecture2anki"
version = "0.1.0"
description = "Transcribe lectures and generate Anki flashcards using local AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Matt" }
]
keywords = ["anki", "flashcards", "transcription", "whisper", "ollama", "education"]

dependencies = [
    "faster-whisper>=1.0.0",
    "ollama>=0.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
lecture2anki = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
